# DocIntel

./: .env  .env.example  .gitignore  DOCINTEL_MASTER_PROMPT.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py  worker.py
backend/app/agents/: action_items_agent.py  compare_agent.py  extract_agent.py  graph.py  rag_agent.py  router.py  state.py  summarise_agent.py  timeline_agent.py  validator.py
backend/app/api/dependencies/: auth.py
backend/app/api/routes/: chat.py  documents.py  upload.py
backend/app/api/websocket/: progress.py
backend/app/db/: init_db.py  session.py
backend/app/models/: document.py
backend/app/services/: chunker.py  context_manager.py  embeddings.py  metrics.py  parser.py  retriever.py
backend/tests/: test_agents.py  test_chunker.py  test_embeddings.py  test_integration.py  test_load.py  test_parser.py  test_pgvector_integration.py  test_retriever.py  test_websocket.py
docs/superpowers/plans/: 2026-03-25-agentic-langgraph.md  2026-03-25-frontend-observability.md  2026-03-25-infrastructure-ingestion.md  2026-03-25-vector-retrieval.md
docs/superpowers/specs/: 2026-03-25-docintel-design.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.test.json  vite.config.ts
frontend/e2e/: chat.spec.ts  upload.spec.ts
frontend/src/: App.tsx  index.css  setupTests.ts
frontend/src/__tests__/: ActionPanel.test.tsx  ChatInterface.test.tsx  DocumentManager.test.tsx  UploadZone.test.tsx
frontend/src/components/: ActionPanel.tsx  ChatInterface.tsx  CitationCard.tsx  DocumentManager.tsx  TraceViewer.tsx  UploadZone.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: index.ts
litellm/: config.yaml
