[project]
name = "docintel-backend"
version = "0.1.0"
description = "Intelligent Document Analysis and Processing Backend"
authors = [
    {name = "DocIntel Team", email = "team@docintel.ai"},
]
urls = {repository = "https://github.com/docintel/docintel"}
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "asyncpg",
    "psycopg2-binary",
    "pgvector",
    "pydantic-settings",
    "celery[redis]",
    "pymupdf",
    "python-multipart",
    "litellm",
    "langchain-litellm",
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-experimental",
    "langchain-community",
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
