[project]
name = "docintel-backend"
version = "0.1.0"
description = "Intelligent Document Analysis and Processing Backend"
authors = [
    {name = "DocIntel Team", email = "team@docintel.ai"},
]
urls = {repository = "https://github.com/docintel/docintel"}
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "asyncpg",
    "psycopg2-binary",
    "pgvector",
    "pydantic-settings",
    "celery[redis]",
    "pymupdf",
    "python-multipart",
    "litellm",
    "langchain-litellm",
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-experimental",
    "langchain-community",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "openinference-instrumentation-langchain",
    "openinference-instrumentation-litellm",
    "arize-phoenix",
    "slowapi",
    "prometheus-client>=0.20",
    "httpx",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "anyio[trio]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require a live database (deselect with '-m not integration')",
]
